--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 sudo: false
 language: node_js
+arch:
+  - amd64
+  - ppc64le
 node_js:
-  - "4"
-  - "6"
+  - "8"
+  - "10"
 before_script:
   - make
 script:
